# api/src/controllers/users.ts
@@ -2,36 +2,36 @@ import { getConnection } from "../conf/db";
 import sql from "mssql";
 import queries from "../models/users"
 import bcryptjs from "bcryptjs"
-import { faceId } from "./facerecognition";
 
 export const getUsers = async (req: any, res: any) => {
-    try {
 
+    try {
         const pool = await getConnection();
         const result = await pool?.request().query(queries.getAllUsers);
 
-        res.json(result?.recordset);
+        res.status(200).json(result?.recordset);
+
+        // TODO: 403 Forbidden/unauthorized
 
     } catch (error) {
-        res.status(500); // Internal server error
+        res.status(500);
         res.send(error);
     }
 }
 
 export const createUser = async (req: any, res: any) => {
-
-    const { idResDev, firstName, lastName, phoneNumber, email, password, active = 1, facialId } = req.body;
+    const { idResDev, firstName, lastName, phoneNumber, email, password, active = 1, faceId } = req.body;
 
     if (idResDev == null || firstName == null || lastName == null || email == null || password == null) {
         console.log("User not created");
-        return res.status(400).json({ msg: 'Bad request. Fill required fields (IdResDev, FirstName, LastName, Email, Password)' });
+        return res.status(400).json({ msg: 'Bad request. Missing some of these fields: IdResDev, FirstName, LastName, Email, Password' });
     }
 
     if (phoneNumber == null) {
         let phoneNumber = "";
     }
-    if (facialId == null) {
-        let facialId = "";
+    if (faceId == null) {
+        let faceId = "";
     }
 
     try {
@@ -45,10 +45,11 @@ export const createUser = async (req: any, res: any) => {
             .input('email', sql.VarChar, email)
             .input('password', sql.VarChar, bcryptjs.hashSync(password))
             .input('active', sql.Bit, active)
-            .input('facialId', sql.VarChar, facialId)
+            .input('faceId', sql.VarChar, faceId)
             .query(queries.createNewUser);
 
-        return res.status(200).json({ idResDev, firstName, lastName, phoneNumber, email, password, active, facialId });
+        return res.status(201).json({ idResDev, firstName, lastName, phoneNumber, 
+            email, password, active, faceId });
 
     } catch (error) {
         res.status(500);
@@ -60,58 +61,77 @@ export const createUser = async (req: any, res: any) => {
 export const getUserById = async (req: any, res: any) => {
     const { id } = req.params;
 
-    const pool = await getConnection();
-    const result = await pool?.request()
-        .input('Id', id)
+    try {
+        const pool = await getConnection();
+        const result = await pool?.request()
+        .input('id', id)
         .query(queries.getUserById);
 
-    res.send(result?.recordset[0]);
+        res.status(200);
+        res.send(result?.recordset[0]);
+
+    } catch (error) {
+        res.status(500).send(error);
+    }
+
+    
+
+    //  TODO: Http responses => 403 forbidden; 404 not found
 }
 
 export const deleteUserById = async (req: any, res: any) => {
     const { id } = req.params;
 
-    const pool = await getConnection();
-    const result = await pool?.request()
-        .input('Id', id)
+    try {
+        const pool = await getConnection();
+        const result = await pool?.request()
+        .input('id', id)
         .query(queries.deleteUser);
+    
+        res.sendStatus(200);
+        
+    } catch (error) {
+        res.status(500).send(error);
+        
+    }
 
-    res.sendStatus(204); // All fine
+    // TODO: Same http responses as in get by id
 }
 
 export const getTotalUsers = async (req: any, res: any) => {
-
     const pool = await getConnection();
     const result = await pool?.request()
-        .query(queries.getTotalUsers);
+    .query(queries.getTotalUsers);
 
-    res.json(result?.recordset[0]['']); // All fine
+    res.json(result?.recordset[0]['']);
+
+    //TODO: Maybe not to be kept
 }
 
 export const updateUserById = async (req: any, res: any) => {
-
     const { idResDev, firstName, lastName, phoneNumber, email, password, active, faceId } = req.body;
     const { id } = req.params;
 
-
-    if (email == null || password == null) {
-        console.log("User not updated");
-        return res.status(400).json({ msg: 'Bad request. Fill required fields' });
-    }
-
-    const pool = await getConnection()
-    await pool?.request()
-        .input('idResDev', sql.VarChar, idResDev)
+    try {
+        const pool = await getConnection()
+        await pool?.request()
+        .input('idResDev', sql.Int, idResDev)
         .input('firstName', sql.VarChar, firstName)
         .input('lastName', sql.VarChar, lastName)
         .input('phoneNumber', sql.VarChar, phoneNumber)
         .input('email', sql.VarChar, email)
-        .input('password', sql.VarChar, password)
-        .input('active', sql.VarChar, active)
-        .input('faceId', sql.VarChar, faceId) //might be erased because now may be another table for the id with luxand
-        .input('Id', sql.Int, id)
+        .input('password', sql.VarChar, bcryptjs.hashSync(password))
+        .input('active', sql.Bit, active)
+        .input('faceId', sql.VarChar, faceId)
+        .input('id', sql.Int, id)
         .query(queries.updateUsersById)
+    
+        res.status(200).json({ idResDev, firstName, lastName, phoneNumber, email, password, active, faceId });
+        
+    } catch (error) {
+        res.status(500).send(error);
+    }
 
-    res.json({ idResDev, firstName, lastName, phoneNumber, email, password, active, faceId, id });
+    // TODO: same http responses as previous todo mentioned
 
 }
