# api/src/models/users.ts
@@ -1,11 +1,11 @@
 export default {
     getAllUsers: 'SELECT * FROM T_Users',
-    createNewUser: `INSERT INTO T_Users (IdResDev, FirstName, LastName, PhoneNumber, Email, Password, Active, FacialID) 
-    VALUES (@idResDev, @firstName, @lastName, @phoneNumber, @email, @password, @active, @facialId)`,
-    getUserById: `SELECT * FROM T_Users WHERE IdUser = @Id`,
-    deleteUser: `DELETE FROM T_Users WHERE IdUser = @Id`,
+    createNewUser: `INSERT INTO T_Users (IdResDev, FirstName, LastName, PhoneNumber, Email, Password, Active, FaceID) 
+    VALUES (@idResDev, @firstName, @lastName, @phoneNumber, @email, @password, @active, @faceId)`,
+    getUserById: `SELECT * FROM T_Users WHERE IdUser = @id`,
+    deleteUser: `DELETE FROM T_Users WHERE IdUser = @id`,
     getTotalUsers: `SELECT COUNT(*) FROM T_Users`,
     updateUsersById: `UPDATE T_Users SET IdResDev = @idResDev, FirstName = @firstName, LastName = @lastName,
-    PhoneNumber = @phoneNumber, Email = @email, Password = @password, Active = @active, FacialID = @facialId,
-    WHERE IdUser = @Id`
+    PhoneNumber = @phoneNumber, Email = @email, Password = @password, Active = @active, FaceID = @faceId
+    WHERE IdUser = @id`
 }
